# reunion-erpnext

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FRAPPE_APP_TEMPLATE.md  INDEX.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  STRUCTURE.md  SUMMARY.txt  Users:.fileloc  pyproject.toml  rename_app.py  requirements.txt  setup.py
.claude/commands/: create-plan.md  execute-plan.md  primer.md
PRPs/: meeting-management-google-calendar.md
docs/: fix-google-calendar-default.md  fix-json-parse-error.md  fix-wrong-calendar.md  frappe-cloud-calendar-fix.md  rename-app-guide.md  view-synchronized-events.md
frappe_app/: __init__.py  hooks.py  modules.txt  patches.txt  permissions.py  utils.py
frappe_app/config/: desktop.py
frappe_app/fixtures/: .gitkeep
frappe_app/patches/v0_1/: example_patch.py
frappe_app/public/css/: frappe_app.css
frappe_app/public/js/: list_view_example.js
frappe_app/tests/: __init__.py  test_utils.py
reunion/: hooks.py  install.py  modules.txt  patches.txt  permissions.py  tasks.py  utils.py
reunion/config/: desktop.py  docs.py
reunion/fixtures/: custom_field.json
reunion/meeting_management/api/: add_google_calendar_fields.py  check_events.py  google_auth.py  google_calendar.py  setup_custom_fields.py
reunion/patches/: .gitkeep
reunion/patches/v0_1/: example_patch.py
reunion/public/js/: doctype_example.js  (+2 more)
reunion/templates/: .gitkeep
reunion/tests/: test_utils.py
reunion/www/: .gitkeep  calendar-detective.html  calendar-detective.py  example-page.html  example-page.py
(+11 files in other folders)
