[project]
name = "reunion"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
description = "Template for Frappe applications"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]